# MaxApiKernel

./: .gitignore  Cargo.toml  README.md  session.db
src/: android_jni.rs  constants.rs  db.rs  enums.rs  errors.rs  files.rs  filters.rs  formatting.rs  lib.rs  main.rs  payloads.rs  types.rs
src/client/: auth.rs  group.rs  handler.rs  message.rs  mod.rs  profile.rs  scheduler.rs  user.rs
src/transport/: mod.rs  socket.rs  websocket.rs
tests/: test_enums.rs  test_errors.rs  test_filters.rs  test_formatting.rs  test_types.rs
