[package]
name = "MaxApiKernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "max_api_kernel"
path = "src/lib.rs"

[[bin]]
name = "MaxApiKernel"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
lz4_flex = "0.11"
async-trait = "0.1"
rand = "0.8"
qrcode = "0.14"
native-tls = "0.2"
tokio-native-tls = "0.3"
bytes = "1"
